# ChangeLog for net-p2p/linuxdcpp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/linuxdcpp/ChangeLog,v 1.43 2011/03/28 14:30:10 nirbheek Exp $

*linuxdcpp-1.1.0 (03 Jul 2011)

  03 Jul 2011; Francisco Blas Izquierdo Riera (klondike)
  +linuxdcpp-1.1.0.ebuild,
  +files/linuxdcpp-1.1.0-fix_libnotify_always_enabled.patch, +metadata.xml:
  Bumping to 1.1.0 and adding libnotify use flag

  28 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  linuxdcpp-1.0.3.ebuild, linuxdcpp-1.0.3-r1.ebuild, linuxdcpp-9999.ebuild:
  Fix slot-dep on gtk+

  18 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  linuxdcpp-1.0.3-r1.ebuild, linuxdcpp-9999.ebuild:
  Remove everything except -j flags from MAKEOPTS wrt #259162 by Max
  Klinger.

*linuxdcpp-1.0.3-r1 (18 Jun 2010)

  18 Jun 2010; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  -files/linuxdcpp-1.0.1-fix-remote-vulnerability.patch,
  +linuxdcpp-1.0.3-r1.ebuild, -files/1.0.1-gcc-4.3.patch:
  Fixed installation of executable to /usr/share (#295769)
  Removed old patches

  18 Jun 2010; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  linuxdcpp-9999.ebuild:
  Fix missing icons and improve ebuild (#276261)

  27 Jun 2009; Raúl Porcel <armin76@gentoo.org> -linuxdcpp-1.0.1-r2.ebuild,
  -linuxdcpp-1.0.2.ebuild, linuxdcpp-9999.ebuild:
  Fix HOMEPAGE, bug #268397

  02 May 2009; Thomas Anderson <gentoofan23@gentoo.org>
  linuxdcpp-1.0.3.ebuild:
  stable amd64, bug 267652

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> linuxdcpp-9999.ebuild:
  Add missing boost dep, bug #260461

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> linuxdcpp-1.0.3.ebuild:
  x86 stable

  07 Mar 2009; Jeremy Olexa <darkside@gentoo.org> linuxdcpp-1.0.2.ebuild:
  amd64 stable, bug 258468

  10 Feb 2009; Raúl Porcel <armin76@gentoo.org> linuxdcpp-1.0.2.ebuild:
  x86 stable

*linuxdcpp-1.0.3 (10 Feb 2009)

  10 Feb 2009; Raúl Porcel <armin76@gentoo.org> +linuxdcpp-1.0.3.ebuild,
  linuxdcpp-9999.ebuild: