@@ -1,5 +1,19 @@
-AUX linuxdcpp-1.1.0-fix_libnotify_always_enabled.patch 1751 RMD160 dc6d58ef3d9f574fdf65192c5a14391dd665a2b6 SHA1 e8c277537e34def7db23ca84ee9a30037c321120 SHA256 7405125faf1606c90f5a1b0bac0f8057346a33cade5520a0322e1d434f8fc642
-DIST linuxdcpp-1.1.0.tar.bz2 529048 RMD160 2fdb3c2b2f48972d0e6ae77fad36f455f824e69c SHA1 8239cbb6068700232850941e0fd9298d363b47a2 SHA256 66012740e9347a2e994c8af5609c40ebf3f86f767258e071a03ef39a2314298a
-EBUILD linuxdcpp-1.1.0.ebuild 1742 RMD160 c45a794f995e5f46ad0c01abc3d202a75f2eb1f3 SHA1 4bd101096e74d5d1d8234d1e174cfe578161d0b0 SHA256 4c77b8b5bf6d6fea4b3950702e7daaaffdea07a5a9c4051b6f5deab3bf813cfa
-MISC ChangeLog 6656 RMD160 d56d619cf02eb9cfed2e27ed6526ded68bb9007b SHA1 a6fb7d34eda6c18fcc6d010ccf7adf3cdcc10ed8 SHA256 2ae69cba06a26bd1b8bcd79a0e349507277dddc62da94656337894ddb690eda2
-MISC metadata.xml 275 RMD160 93042cfce840b3e14707262e58f97ffea27563f7 SHA1 63ee7db13e70827506a1964d9b40e43c93777cfa SHA256 37372f6c325e169c4bf5de7842eee9a391b48930b1e24a903acfe330b6daabbe
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX linuxdcpp-1.1.0-fix_libnotify_always_enabled.patch 1751 SHA256 7405125faf1606c90f5a1b0bac0f8057346a33cade5520a0322e1d434f8fc642 SHA512 2eae8c853ca90e296aad884084007c4ad4a45639d95f60b0331248006957b0e2e2e315ae2e9cc9c5322edbde5922302b263aceadfd7a7fd37854deb11132fe90 WHIRLPOOL 720193c2feb1a24c5a8f3c127b8a8583743881ee5d4dc3282d4473dff7c10f94ca9674d02357a5ac46857dafa384d03a61ff80670c1ad079738b96727484c9f7
+DIST linuxdcpp-1.1.0.tar.bz2 529048 SHA256 66012740e9347a2e994c8af5609c40ebf3f86f767258e071a03ef39a2314298a SHA512 df8715ac52e5bde9c5d4ca5880ed78095f2476e4ace16d9edd5d273168a5c99134bc7b3fb4b293b5d7917d3be5e24396785ae2cd148946573ec78432a87fb612 WHIRLPOOL 383602f5c6f9fa58920a7a06cb78940ffd9fd8314beac605f113c91a1b4c5b2068cf3be0ae2749a13713b97e7c47a043ff991718a1233cd03035bf8945199fa8
+EBUILD linuxdcpp-1.1.0.ebuild 1741 SHA256 ed809a293885fa7a0fc626c9c451d5dea982c258c6460dbcd39be92c8ce70a0f SHA512 54a76984b8e50c328e922257dca352ce3fb97a46a7da028b215a0324c47c70edeb229c764ae4c3a5405c2ae2eb88e00e0a865599fcdff4c265f45aa1c30f53c0 WHIRLPOOL 84d6bc42d4cb307f831cd8874414e4b7f8ac5a1bcb49b2e96e6398ac2bcaf6843225253319aee9f6fbd30cc64554aed39cfcef84205a6779f99cb756df6ada8d
+MISC ChangeLog 6782 SHA256 61a093450f1086344db954ba75c94e913e3e60cfb22b2c82af48aa663dc480aa SHA512 0c4d3e1cb637bd8bdb1e7a89b8e1c46579e9831c1b0eed115e9b73a1ab65f0adac973bd70aca732206b9b1dfbb1bae01fe2fdb41c7f2c1e4717c3cbfddaade75 WHIRLPOOL d9e63d0e17fae9c7b34ff3b7494d3bd7364fa79b81e51c270ef362c92b412f5a2a0721664000a0154153e297f346c4eccc34361b42cd8f8c0d218b2331228ea8
+MISC metadata.xml 275 SHA256 37372f6c325e169c4bf5de7842eee9a391b48930b1e24a903acfe330b6daabbe SHA512 61f35a43f594354514586d42e83ae8bbde07941a1329c5234e8bd776098c6088932d70107373b35a7274ca177864740fe1338792d48f8cef188a8f96cebd015a WHIRLPOOL 22ffc5e39c91a9036aae3c64bf9e6f4b3d2853f897b38ebfa6c4f3b44f177ff7a851a5946f1a2a6b30ce3f74f63edea5e9de0eb8a7e33f55dfc7d82e66079644
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJURWT/AAoJEKXBodJLEo5SVoQIAM4ptUMs9o9o/ozC3wYFP7b1
+UlwORv7g9bbBOR2iglzvbF4S02iE2PuDAPsW+kbxFbZnYKfbJ5ADFWXkiVBd7q5c
+yWXpO9U5lL9SLTFITavPMj42AofYKSclVDZIgpcNQpZX3WFATZMkppbM8jV9Ju+S
+CSvl+9/3mbsrhWMAWRH7IrbjJUnKCzBubXtm2H8rtT5LNjKy2PUkKX2dtMSWBywP
+jA4meTK/BITt6mm2MmE+KNH/gq/hiAFpm80DfPKkXTHiDkq885P85Ul6UVLjDaRV
+DVLt9HIlM0Mgkgr6h0xdpH15KGCwdR0HUFhjnFiu8uxNZ5OXrdzCVeqkeUxrcFU=
+=lcSn
+-----END PGP SIGNATURE-----
