@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/linuxdcpp
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-p2p/linuxdcpp/ChangeLog,v 1.43 2011/03/28 14:30:10 nirbheek Exp $
+
+  20 Oct 2014; Francisco Blas Izquierdo Riera (klondike) linuxdcpp-1.1.0.ebuild:
+  Updating EAPI, using the pkgconfig virtual
 
 *linuxdcpp-1.1.0 (03 Jul 2011)
 
@@ -202,4 +205,3 @@
   17 Jan 2007; Raúl Porcel <armin76@gentoo.org> +metadata.xml,
   +linuxdcpp-20070117.ebuild:
   New ebuild, bug 102733
-
